--- a/02/index-table.html
+++ b/02/index-table.html
@@ -1,15 +1,34 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
-<head>
-	<title>온라인 프로필</title>
-	<meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+  <head>
+    <title>온라인 프로필</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/style.css" />
 
-<body>
+    <style>
+      table {
+        width: 70%;
+        border: 1px solid #222;
+        border-collapse: collapse;
+      }
+
+      thead {
+        background: #eee;
+      }
+
+      th,
+      td {
+        border: 1px solid blue;
+        padding: 5px;
+        font-size: 0.8em;
+      }
+    </style>
+  </head>
+
+  <body>
     <div id="container">
-        <!-- 사이드바 -->
-        <!-- <aside>
+      <!-- 사이드바 -->
+      <!-- <aside>
             <div id="namecard">
 
             </div>
@@ -21,45 +40,75 @@
 
             </div>        
         </aside> -->
-        <div id="main">
-            <!-- 자기 소개 -->
-            <section>
-                <h2 class="subtitle">Who am I?</h2>
-                <p><mark>프런트엔드 웹 기술(Front-end Web Tech.)</mark>에 관심이 많습니다. <br>현재 제주의 한 시골 마을에서 코딩 중입니다.</p>
-            </section>
+      <div id="main">
+        <!-- 자기 소개 -->
+        <section>
+          <h2 class="subtitle">Who am I?</h2>
+          <p>
+            <mark>프런트엔드 웹 기술(Front-end Web Tech.)</mark>에 관심이
+            많습니다. <br />현재 제주의 한 시골 마을에서 코딩 중입니다.
+          </p>
+        </section>
 
-            <!-- 경력 -->
-            <section>
-                <h2 class="subtitle">Experience</h2>
-                <ul>
-                    <li>프론트엔드 개발
-                        <ul>
-                            <li>업무 내용 업무 내용 업무 내용 </li>
-                            <li>업무 내용 </li>
-                            <li>업무 내용 업무 내용</li> 
-                        </ul>
-                    </li>
-                    <li>웹 디자인
-                        <ul>
-                            <li>업무 내용 </li>
-                            <li>업무 내용 업무 내용</li>
-                        </ul>                        
-                    </li>
-                </ul>             
-            </section>
+        <!-- 경력 -->
+        <section>
+          <h2 class="subtitle">Experience</h2>
+          <ul>
+            <li>
+              프론트엔드 개발
+              <ul>
+                <li>업무 내용 업무 내용 업무 내용</li>
+                <li>업무 내용</li>
+                <li>업무 내용 업무 내용</li>
+              </ul>
+            </li>
+            <li>
+              웹 디자인
+              <ul>
+                <li>업무 내용</li>
+                <li>업무 내용 업무 내용</li>
+              </ul>
+            </li>
+          </ul>
+        </section>
 
-            <!-- 숙련도 -->
-            <section>
-                <h2 class="subtitle">Skills</h2>
+        <!-- 숙련도 -->
+        <section>
+          <h2 class="subtitle">Skills</h2>
+        </section>
 
-            </section>
-
-            <!-- 학력 -->
-            <section>
-                <h2 class="subtitle">Education</h2>
-
-            </section>
-        </div>        
+        <!-- 학력 -->
+        <section>
+          <h2 class="subtitle">Education</h2>
+          <table>
+            <caption>
+              학력 사항
+            </caption>
+            <thead>
+              <tr>
+                <th>출신학교</th>
+                <th>전공</th>
+                <th>기간</th>
+                <th>구분</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td>경상국립대학교</td>
+                <td>정보통계학과</td>
+                <td>2018.02~</td>
+                <td>재학</td>
+              </tr>
+              <tr>
+                <td>경상국립대학교</td>
+                <td>컴퓨터과학과</td>
+                <td>2019.02~</td>
+                <td>졸업</td>
+              </tr>
+            </tbody>
+          </table>
+        </section>
+      </div>
     </div>
-</body>
+  </body>
 </html>
