--- a/02/index-text.html
+++ b/02/index-text.html
@@ -1,15 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
-<head>
-	<title>온라인 프로필</title>
-	<meta charset="utf-8">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+  <head>
+    <title>온라인 프로필</title>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
+  <body>
     <div id="container">
-        <!-- 사이드바 -->
-        <!-- <aside>
+      <!-- 사이드바 -->
+      <!-- <aside>
             <div id="namecard">
 
             </div>
@@ -21,31 +21,45 @@
 
             </div>        
         </aside> -->
-        <div id="main">
-            <!-- 자기 소개 -->
-            <section>
-                <h2 class="subtitle">Who am I?</h2>
+      <div id="main">
+        <!-- 자기 소개 -->
+        <section>
+          <h2 class="subtitle">Who am I?</h2>
+          <p>
+            안녕하세요! 저는
+            <mark>통계학을 본전공, 컴퓨터과학을 복수전공</mark> 하고 있는<br />
+            경상국립대학교 18학번 재학생 입니다.
+          </p>
+        </section>
 
-            </section>
+        <!-- 경력 -->
+        <section>
+          <h2 class="subtitle">Experience</h2>
+          <ul>
+            <li>컴퓨터과학과 복수전공</li>
+            <ul>
+              <li>2학년때 복수전공</li>
+              <li>3학년때 뇌과학 연구실 들어옴</li>
+              <li>html 기본기부터 다시 공부 시작</li>
+            </ul>
+            <li>통계학 본전공</li>
+            <ul>
+              <li>통계학과로 입학</li>
+              <li>빅데이터 공모전 준비</li>
+              <li>개척학기제 실시</li>
+            </ul>
+          </ul>
+        </section>
+        <!-- 숙련도 -->
+        <section>
+          <h2 class="subtitle">Skills</h2>
+        </section>
 
-            <!-- 경력 -->
-            <section>
-                <h2 class="subtitle">Experience</h2>
-           
-            </section>
-
-            <!-- 숙련도 -->
-            <section>
-                <h2 class="subtitle">Skills</h2>
-
-            </section>
-
-            <!-- 학력 -->
-            <section>
-                <h2 class="subtitle">Education</h2>
-
-            </section>
-        </div>        
+        <!-- 학력 -->
+        <section>
+          <h2 class="subtitle">Education</h2>
+        </section>
+      </div>
     </div>
-</body>
+  </body>
 </html>
