--- a/03/index.html
+++ b/03/index.html
@@ -19,6 +19,18 @@
         padding: 5px; /* 셀 테두리와 셀 내용 사이의 여백(패딩) */
         font-size: 0.8em; /* 셀의 글자 크기 */
       }
+      a,
+      a:visited {
+        color: black;
+        text-decoration: none;
+      }
+      #sns > ul {
+        padding-left: 0;
+      }
+      #sns > ul > li {
+        display: inline-block;
+        width: 80px;
+      }
     </style>
   </head>
 
@@ -39,10 +51,10 @@
           <h2>SNS</h2>
           <ul>
             <li>
-              <a href="http://www.naver.com/" target="_blank">이것은 네이버</a>
+              <a href="http://www.naver.com/" target="_blank">naver</a>
             </li>
             <li>
-              <a href="http://www.daum.net/" target="_blank">이것은 다음</a>
+              <a href="http://www.daum.net/" target="_blank">daum</a>
             </li>
           </ul>
         </div>
