--- a/03/quiz-3.html
+++ b/03/quiz-3.html
@@ -1,11 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
-<head>
-	<meta charset="utf-8">
-	<title>링크 사용하기</title>
-</head>
-<body>
-	<h1>포털 사이트 Daum으로 연결하기</h1>
-	<img src="http://icon.daumcdn.net/w/icon/1606/08/150737977.png" alt="Daum">
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>링크 사용하기</title>
+  </head>
+  <body>
+    <h1>포털 사이트 Daum으로 연결하기</h1>
+    <a href="http://www.daum.net" target="_blank"
+      ><img
+        src="http://icon.daumcdn.net/w/icon/1606/08/150737977.png"
+        alt="Daum"
+    /></a>
+  </body>
 </html>
