웹프로그래밍 3주차 공부 완료

--- a/03/quiz-3.html
+++ b/03/quiz-3.html
@@ -9,7 +9,7 @@
     <a href="http://www.daum.net" target="_blank"
       ><img
         src="http://icon.daumcdn.net/w/icon/1606/08/150737977.png"
-        alt="Daum"
+        alt="Daum입니다"
     /></a>
   </body>
 </html>
