웹프로그래밍 4주차 공부 완료 (HTML 끝)

--- a/04/quiz-2.html
+++ b/04/quiz-2.html
@@ -1,29 +1,66 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>프런트엔드 개발자 지원서</title>
     <style>
-			#container { 
-				width:520px;
-				border:1px solid black;
-				padding:20px 40px;
-				margin:0 auto;
-			}
-      fieldset { margin-bottom:15px; }
-      legend { font-weight:bold; }
-			ul {list-style-type: none;}
-			li { line-height:30px;}
+      #container {
+        width: 520px;
+        border: 1px solid black;
+        padding: 20px 40px;
+        margin: 0 auto;
+      }
+      fieldset {
+        margin-bottom: 15px;
+      }
+      legend {
+        font-weight: bold;
+      }
+      ul {
+        list-style-type: none;
+      }
+      li {
+        line-height: 30px;
+      }
     </style>
   </head>
   <body>
-		<div id="container">
-			<h1>프런트엔드 개발자 지원서 </h1>
-			<p>HTML, CSS, Javascript에 대한 기술적 이해와 경험이 있는 분을 찾습니다.</p>
-			<hr>
-			<form>
-				
-			</form>
-		</div>
+    <div id="container">
+      <h1>프런트엔드 개발자 지원서</h1>
+      <p>
+        HTML, CSS, Javascript에 대한 기술적 이해와 경험이 있는 분을 찾습니다.
+      </p>
+      <hr />
+      <form>
+        <div>개인정보</div>
+        <ul>
+          <li>
+            <label for=""
+              >이름 <input type="text" placeholder="공백 없이 입력하세요"
+            /></label>
+          </li>
+          <li>
+            <label for="">연락처 <input type="tel" /></label>
+          </li>
+        </ul>
+        <div>지원분야</div>
+        <ul>
+          <li><input type="radio" name="field" /> 웹 퍼블리싱</li>
+          <li><input type="radio" name="field" /> 웹 어플리케이션 개발</li>
+          <li><input type="radio" name="field" /> 개발 환경 개선</li>
+        </ul>
+        <p>지원동기</p>
+        <textarea
+          name="apply"
+          id=""
+          cols="60"
+          rows="5"
+          placeholder="본사 지원 동기를 간략히 써 주세요"
+        ></textarea>
+        <div></div>
+        <button type="submit">접수하기</button>
+        <button type="reset">다시 쓰기</button>
+      </form>
+    </div>
   </body>
 </html>
