--- a/04/quiz-1.html
+++ b/04/quiz-1.html
@@ -1,23 +1,41 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="ko">
-<head>
-	<meta charset="utf-8">
-	<title>예약 접수</title>
-	<style>
-		ul {
-			list-style:none;
-		}
-		li {
-			line-height:50px;
-		}
-		label {
-			width:60px;
-			float:left;
-		}
-	</style>
-</head>
-<body>
-	<h1>예약 정보</h1>
-
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>예약 접수</title>
+    <style>
+      ul {
+        list-style: none;
+      }
+      li {
+        line-height: 50px;
+      }
+      label {
+        width: 60px;
+        float: left;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>예약 정보</h1>
+    <form action="">
+      <ul>
+        <li>
+          <label for="name">이름</label>
+          <input type="text" />
+        </li>
+        <li>
+          <label for="phone">휴대폰</label>
+          <input type="tel" />
+        </li>
+        <li>
+          <label for="email">이메일</label>
+          <input type="email" />
+        </li>
+        <li>
+          <input type="submit" value="예약하기" />
+        </li>
+      </ul>
+    </form>
+  </body>
 </html>
